--- a/style.css
+++ b/style.css
@@ -79,6 +79,23 @@ video {
     animation: scaleUpDown 1s 1;
 }
 
+#gallery-btn {
+    position: absolute;
+    top: 84%;
+    color: white;
+    left: 89%;
+    font-size: x-large;
+    border: 5px solid white;
+    border-radius: 13px;
+    height: 60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-weight: bold;
+}
+
 @keyframes scaleUpDown {
     0% {
         transform: scale(1);
